@@ -30,6 +30,7 @@ Morten:
 	* Check for yelp in autogen.  [#558]
 	* Fix ssconvert problem with conditional styles.
 	* Move from style regions to style classes in css.
+	* Implement #ifdef for built-in css.
 
 --------------------------------------------------------------------------
 Gnumeric 1.12.48
